--- a/src/components/fullscreenimage.module.css
+++ b/src/components/fullscreenimage.module.css
@@ -2,10 +2,30 @@
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-position: bottom center;
-  background-repeat: repeat-y;
+  background-position: 55% 20%;
   background-size: cover;
   border: 0;
   padding: 0;
-  color: white;
+}
+
+.darkimage {
+  color: #ccc;
+}
+
+.lightimage {
+  color: black;
+}
+
+h1 {
+  padding: 1rem;
+  text-align: center;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+}
+
+.lightimage h1 {
+  background: rgba(255,255,255,0.75);
+}
+
+.darkimage h1 {
+  background: rgba(0,0,0,0.5);
 }
