--- a/src/components/menus/MainMenuElement.module.css
+++ b/src/components/menus/MainMenuElement.module.css
@@ -5,6 +5,10 @@
 
 .MainMenuElement {
   background-color: black;
+  padding: 0.5rem 1rem;
+  display: flex;
+  width: max-content;
+  flex-direction: column;
 }
 
 .ul {
@@ -14,14 +18,19 @@
 }
 
 .li {
-  padding-top: 0.5rem;
+  margin: 0;
 }
 
 .h4 {
+  margin:0;
   color: var(--main-accent-color);
+  border: 1px solid red;
+  padding: 0 0 1rem 0;
 }
 
 .li a {
   text-decoration: none;
+  font-weight: 100;
   color: var(--main-reverse-color);
+  border: 1px solid yellow;
 }
