--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,8 @@
 :root {
   --main-accent-color: #0766ad;
+  --main-reverse-accent-color: #9ed3fb;
   --main-accent-color-darker50: #011422;
   --secondary-accent-color: #98c745;
   --main-reverse-color: rgb(242, 242, 242);
-  --main-color: rgb(0,0,0,0.95);
+  --main-color: rgb(0, 0, 0, 0.95);
 }
-
