Add close button to secondary navigation.

--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -10,6 +10,7 @@
     padding: 0;
 
     & a {
+      user-select: none;
       display: block;
       color: currentColor;
       text-decoration: none;
