--- a/src/components/navigation/bigmenu.module.css
+++ b/src/components/navigation/bigmenu.module.css
@@ -30,9 +30,12 @@ ul.navgrouplist {
   margin:0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   & li {
     display: block;
+  }
+  & > li {
+    min-width: 23%;
+    margin-right: 1em;
   }
 }
 
