--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -55,14 +55,21 @@
   margin: 0;
   padding: 0;
   list-style: none;
-
   & li {
     margin: 0;
     padding: 0;
   }
+  & >li {
+    display: block;
+    max-height:0;
+    overflow: hidden;
+    transition: max-height 0.4s ease-in;
+    &.active {
+      max-height: 500px;
+    }
+  }
 }
 
 li.hidden {
-  height: 0;
-  display: none;
 }
+
